<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:background="@color/gris"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/azul_653"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/android"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/android"
                android:textColor="@color/azul_653"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="15sp"

                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/apple"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/apple"
                android:textColor="@color/azul_653"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="15sp"

                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/java"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/java"
                android:textColor="@color/azul_653"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="15sp"

                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>